Fixing parts of the challenge page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,15 +24,15 @@
     "LanguagePickerSrLabel": "Select language"
   },
   "challengePage": {
-    "aboutTitle": "This is COMP 227 -challenge",
+    "aboutTitle": "This is COMP 227 challenge",
     "joinTitle": "Students, Heed The Call!",
-    "registerButton": "Register your company to Full Stack challenge",
+    "registerButton": "Register yourself for the challenge",
     "nameLabel": "Name",
     "namePlaceholder": "Jane Doe",
     "titleLabel": "Title",
-    "companyLabel": "Company",
-    "companyPlaceholder": "Company Co",
-    "phoneLabel": "Phone",
+    "companyLabel": "",
+    "companyPlaceholder": "",
+    "phoneLabel": "",
     "emailLabel": "Email address",
     "whereDidYouHearLabel": "Where did you hear from the challenge",
     "submitButton": "Submit",
