ran prettify on the source code

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -56,7 +56,7 @@
     "startCourseButton": "Start course",
     "announcementsTitle": "Announcements",
     "authorsTitle": "Credits & License",
-    "courseNameTitle": "A Deep Dive into Modern Web Development"
+    "courseNameTitle": "Intro to Modern Web Development"
   },
   "notFoundPage": {
     "title": "Page not found"
